// Vitest Snapshot v1

exports[`lib/notion/update-current-weather > colors cool temperature blue 1`] = `
{
  "heading_1": {
    "color": "default",
    "is_toggleable": true,
    "rich_text": [
      {
        "text": {
          "content": "🌑 ",
        },
      },
      {
        "annotations": {
          "color": "blue",
        },
        "text": {
          "content": "40°",
        },
      },
    ],
  },
  "object": "block",
  "type": "heading_1",
}
`;

exports[`lib/notion/update-current-weather > colors hot temperature orange 1`] = `
{
  "heading_1": {
    "color": "default",
    "is_toggleable": true,
    "rich_text": [
      {
        "text": {
          "content": "☀️ ",
        },
      },
      {
        "annotations": {
          "color": "orange",
        },
        "text": {
          "content": "85°",
        },
      },
    ],
  },
  "object": "block",
  "type": "heading_1",
}
`;

exports[`lib/notion/update-current-weather > colors sweltering temperature red 1`] = `
{
  "heading_1": {
    "color": "default",
    "is_toggleable": true,
    "rich_text": [
      {
        "text": {
          "content": "☀️ ",
        },
      },
      {
        "annotations": {
          "color": "red",
        },
        "text": {
          "content": "100°",
        },
      },
    ],
  },
  "object": "block",
  "type": "heading_1",
}
`;

exports[`lib/notion/update-current-weather > colors warm temperature green 1`] = `
{
  "heading_1": {
    "color": "default",
    "is_toggleable": true,
    "rich_text": [
      {
        "text": {
          "content": "☁️ ",
        },
      },
      {
        "annotations": {
          "color": "green",
        },
        "text": {
          "content": "60°",
        },
      },
    ],
  },
  "object": "block",
  "type": "heading_1",
}
`;

exports[`lib/notion/update-current-weather > displays rain icon and probability if rain 1`] = `
{
  "heading_1": {
    "color": "default",
    "is_toggleable": true,
    "rich_text": [
      {
        "text": {
          "content": "☔️ ",
        },
      },
      {
        "annotations": {
          "color": "gray",
        },
        "text": {
          "content": "(45%) ",
        },
      },
      {
        "annotations": {
          "color": "purple",
        },
        "text": {
          "content": "23°",
        },
      },
    ],
  },
  "object": "block",
  "type": "heading_1",
}
`;

exports[`lib/notion/update-current-weather > displays snow icon and accumulation if snow 1`] = `
{
  "heading_1": {
    "color": "default",
    "is_toggleable": true,
    "rich_text": [
      {
        "text": {
          "content": "❄️ ",
        },
      },
      {
        "annotations": {
          "color": "gray",
        },
        "text": {
          "content": "(0.98in) ",
        },
      },
      {
        "annotations": {
          "color": "purple",
        },
        "text": {
          "content": "23°",
        },
      },
    ],
  },
  "object": "block",
  "type": "heading_1",
}
`;

exports[`lib/notion/update-current-weather > updates the current weather block and daily weather table 1`] = `
[
  {
    "heading_1": {
      "color": "default",
      "is_toggleable": true,
      "rich_text": [
        {
          "text": {
            "content": "🥶 ",
          },
        },
        {
          "annotations": {
            "color": "purple",
          },
          "text": {
            "content": "23°",
          },
        },
      ],
    },
    "object": "block",
    "type": "heading_1",
  },
  {
    "object": "block",
    "table_row": {
      "cells": [
        [
          {
            "text": {
              "content": "Wed, 12/28",
            },
          },
        ],
        [
          {
            "annotations": {
              "color": "blue",
            },
            "text": {
              "content": "23°",
            },
          },
          {
            "annotations": {
              "color": "gray",
            },
            "text": {
              "content": " / ",
            },
          },
          {
            "annotations": {
              "color": "orange",
            },
            "text": {
              "content": "62°",
            },
          },
        ],
        [
          {
            "text": {
              "content": "🌪 ",
            },
          },
        ],
      ],
    },
    "type": "table_row",
  },
  {
    "object": "block",
    "table_row": {
      "cells": [
        [
          {
            "text": {
              "content": "Thu, 12/29",
            },
          },
        ],
        [
          {
            "annotations": {
              "color": "blue",
            },
            "text": {
              "content": "45°",
            },
          },
          {
            "annotations": {
              "color": "gray",
            },
            "text": {
              "content": " / ",
            },
          },
          {
            "annotations": {
              "color": "orange",
            },
            "text": {
              "content": "66°",
            },
          },
        ],
        [
          {
            "text": {
              "content": "⛅️ ",
            },
          },
        ],
      ],
    },
    "type": "table_row",
  },
  {
    "object": "block",
    "table_row": {
      "cells": [
        [
          {
            "text": {
              "content": "Fri, 12/30",
            },
          },
        ],
        [
          {
            "annotations": {
              "color": "blue",
            },
            "text": {
              "content": "43°",
            },
          },
          {
            "annotations": {
              "color": "gray",
            },
            "text": {
              "content": " / ",
            },
          },
          {
            "annotations": {
              "color": "orange",
            },
            "text": {
              "content": "66°",
            },
          },
        ],
        [
          {
            "text": {
              "content": "💨 ",
            },
          },
        ],
      ],
    },
    "type": "table_row",
  },
  {
    "object": "block",
    "table_row": {
      "cells": [
        [
          {
            "text": {
              "content": "Sat, 12/31",
            },
          },
        ],
        [
          {
            "annotations": {
              "color": "blue",
            },
            "text": {
              "content": "33°",
            },
          },
          {
            "annotations": {
              "color": "gray",
            },
            "text": {
              "content": " / ",
            },
          },
          {
            "annotations": {
              "color": "orange",
            },
            "text": {
              "content": "54°",
            },
          },
        ],
        [
          {
            "text": {
              "content": "☔️ ",
            },
          },
          {
            "annotations": {
              "color": "gray",
            },
            "text": {
              "content": "(85%) ",
            },
          },
        ],
      ],
    },
    "type": "table_row",
  },
  {
    "object": "block",
    "table_row": {
      "cells": [
        [
          {
            "text": {
              "content": "Sun, 1/1",
            },
          },
        ],
        [
          {
            "annotations": {
              "color": "blue",
            },
            "text": {
              "content": "25°",
            },
          },
          {
            "annotations": {
              "color": "gray",
            },
            "text": {
              "content": " / ",
            },
          },
          {
            "annotations": {
              "color": "orange",
            },
            "text": {
              "content": "51°",
            },
          },
        ],
        [
          {
            "text": {
              "content": "❄️ ",
            },
          },
        ],
      ],
    },
    "type": "table_row",
  },
  {
    "object": "block",
    "table_row": {
      "cells": [
        [
          {
            "text": {
              "content": "Mon, 1/2",
            },
          },
        ],
        [
          {
            "annotations": {
              "color": "blue",
            },
            "text": {
              "content": "26°",
            },
          },
          {
            "annotations": {
              "color": "gray",
            },
            "text": {
              "content": " / ",
            },
          },
          {
            "annotations": {
              "color": "orange",
            },
            "text": {
              "content": "51°",
            },
          },
        ],
        [
          {
            "text": {
              "content": "🌫 ",
            },
          },
        ],
      ],
    },
    "type": "table_row",
  },
  {
    "object": "block",
    "table_row": {
      "cells": [
        [
          {
            "text": {
              "content": "Tue, 1/3",
            },
          },
        ],
        [
          {
            "annotations": {
              "color": "blue",
            },
            "text": {
              "content": "29°",
            },
          },
          {
            "annotations": {
              "color": "gray",
            },
            "text": {
              "content": " / ",
            },
          },
          {
            "annotations": {
              "color": "orange",
            },
            "text": {
              "content": "63°",
            },
          },
        ],
        [
          {
            "text": {
              "content": "🥵 ",
            },
          },
        ],
      ],
    },
    "type": "table_row",
  },
  {
    "object": "block",
    "table_row": {
      "cells": [
        [
          {
            "text": {
              "content": "Wed, 1/4",
            },
          },
        ],
        [
          {
            "annotations": {
              "color": "blue",
            },
            "text": {
              "content": "28°",
            },
          },
          {
            "annotations": {
              "color": "gray",
            },
            "text": {
              "content": " / ",
            },
          },
          {
            "annotations": {
              "color": "orange",
            },
            "text": {
              "content": "44°",
            },
          },
        ],
        [
          {
            "text": {
              "content": "🌀 ",
            },
          },
        ],
      ],
    },
    "type": "table_row",
  },
  {
    "object": "block",
    "paragraph": {
      "rich_text": [
        {
          "annotations": {
            "color": "gray",
          },
          "plain_text": "Updated Dec 28, 12:00am",
          "text": {
            "content": "Updated Dec 28, 12:00am",
          },
          "type": "text",
        },
      ],
    },
    "type": "paragraph",
  },
]
`;
